[metadata]
name = buck
author = Felipe Reyes
author-email = felipe.reyes@canonical.com
summary = Charmed OpenStack automation
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://launchpad.net/buck
project_urls =
    Bug Tracker = https://bugs.launchpad.net/buck/
    Source Code = https://github.com/freyes/buck/
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    buck

[entry_points]
console_scripts =
    buck = buck.cmd:main
tox =
  ansible-collection = buck.tox_hooks
